tarea_programada_1/entrega_5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> header init listcon
Rule 2     header -> ROUTE_HEADER vpnip ROUTE_HEADER
Rule 3     vpnip -> empty
Rule 4     vpnip -> VPN_IP IP vpnip
Rule 5     init -> initbody FASE_END
Rule 6     initbody -> date software initbody
Rule 7     initbody -> date network initbody
Rule 8     initbody -> date hardware initbody
Rule 9     initbody -> empty
Rule 10    software -> plugin
Rule 11    software -> SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 12    network -> sbinit
Rule 13    network -> tuntap
Rule 14    network -> CRYPTO_MSG
Rule 15    network -> ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 16    network -> IP_PROTOCOL
Rule 17    network -> CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 18    network -> CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
Rule 19    network -> IFCONFIG_END
Rule 20    network -> CONN_MSG
Rule 21    network -> TCP_MSG
Rule 22    network -> SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 23    hardware -> SYS_MSG
Rule 24    hardware -> SIGTERM_MSG
Rule 25    hardware -> OPEN_VPN_MSG MONTH DAY YEAR
Rule 26    hardware -> LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
Rule 27    hardware -> SYS_MSG VAR_SET VAR_VAL
Rule 28    hardware -> VAR_SET VAR_VAL
Rule 29    sbinit -> SBIN_IP_MSG IP IP_RNG
Rule 30    sbinit -> SBIN_IP_MSG IP IP_RNG PEER IP
Rule 31    sbinit -> SBIN_IP_MSG IP PEER IP
Rule 32    sbinit -> SBIN_IP_MSG
Rule 33    sbinit -> empty
Rule 34    plugin -> PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 35    plugin -> PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
Rule 36    plugin -> PLUGIN_MSG DIR
Rule 37    plugin -> PLUGIN_MSG
Rule 38    plugin -> IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 39    tuntap -> TUN_TAP_MSG
Rule 40    listcon -> listcon conection
Rule 41    listcon -> conection
Rule 42    conection -> start coninit login peering conline end
Rule 43    start -> date TCP_MSG IP PORT
Rule 44    coninit -> coninit conmsg
Rule 45    coninit -> conmsg
Rule 46    conmsg -> date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
Rule 47    conmsg -> date plugin
Rule 48    conmsg -> date IP PORT SYS_MSG SPECIAL_CHAR user SPECIAL_CHAR CN_SET
Rule 49    conmsg -> date IP PORT CONN_MSG CRYPTO_MSG
Rule 50    login -> date IP PORT SPECIAL_CHAR PROF SPECIAL_CHAR PEER IP PORT
Rule 51    login -> date IP PORT SPECIAL_CHAR CARNET SPECIAL_CHAR PEER IP PORT
Rule 52    peering -> peering peermsg
Rule 53    peering -> peermsg
Rule 54    peermsg -> peercon CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
Rule 55    peermsg -> peercon plugin
Rule 56    peermsg -> peercon CONN_MSG CONN_MSG DIR
Rule 57    peermsg -> peercon CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR user SLASH IP PORT
Rule 58    peermsg -> peercon SYS_MSG user SLASH IP PORT COLON IP
Rule 59    peermsg -> peercon SYS_MSG
Rule 60    conline -> routehead routing routend
Rule 61    routehead -> peercon SENT_CNT SPECIAL_CHAR user SPECIAL_CHAR COLON SPECIAL_CHAR
Rule 62    routend -> TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
Rule 63    routing -> routing route
Rule 64    routing -> route
Rule 65    route -> ROUTE_FLAG VPN_IP IP
Rule 66    route -> ROUTE_FLAG VPN_IP
Rule 67    end -> endmsg endmsg endmsg
Rule 68    endmsg -> peercon CONN_MSG CIPHER
Rule 69    peercon -> date user SLASH IP PORT
Rule 70    date -> WEEK_DAY MONTH DAY CLOCK YEAR
Rule 71    user -> CARNET
Rule 72    user -> PROF
Rule 73    empty -> <empty>

Terminals, with rules where they appear

CARNET               : 51 71
CIPHER               : 62 68
CLOCK                : 70
CN_SET               : 48
COLON                : 58 61
CONN_MSG             : 17 18 20 49 54 56 56 57 57 68
CRYPTO_MSG           : 14 49
DAY                  : 25 26 70
DIR                  : 34 35 35 36 38 56
FASE_END             : 5
FLAGS                : 35 46
IFCONFIG_END         : 19
IP                   : 4 15 15 18 29 30 30 31 31 38 43 46 46 48 49 50 50 51 51 54 57 57 58 58 62 62 65 69
IP_PROTOCOL          : 16
IP_RNG               : 29 30
LIB_VER_MSG          : 26 26
MONTH                : 25 26 70
OPEN_VPN_MSG         : 25
PEER                 : 30 31 50 51 62
PLUGIN_MSG           : 34 35 36 37 38
POOL_RET             : 54
PORT                 : 38 43 46 46 48 49 50 50 51 51 57 58 69
PROF                 : 50 72
ROUTE_FLAG           : 65 66
ROUTE_GATEWAY        : 15
ROUTE_HEADER         : 2 2
SBIN_IP_MSG          : 29 30 31 32
SENT_CNT             : 61
SIGTERM_MSG          : 24
SLASH                : 15 57 58 69
SPECIAL_CHAR         : 11 18 35 35 35 35 46 48 48 50 50 51 51 54 57 57 61 61 61 62 62 62
SYS_MSG              : 11 22 23 27 46 48 58 59
TCP_MSG              : 21 43
TOPOLOGY             : 62
TUN_TAP_MSG          : 39
VAR_SET              : 11 11 15 15 17 17 18 18 18 22 22 27 28 34 35 38 46 54 54 62
VAR_VAL              : 11 11 15 15 17 17 18 18 22 22 27 28 34 35 38 46 54 62
VPN_IP               : 4 65 66
WEEK_DAY             : 70
YEAR                 : 25 26 70
error                : 

Nonterminals, with rules where they appear

conection            : 40 41
coninit              : 42 44
conline              : 42
conmsg               : 44 45
date                 : 6 7 8 43 46 47 48 49 50 51 69
empty                : 3 9 33
end                  : 42
endmsg               : 67 67 67
file                 : 0
hardware             : 8
header               : 1
init                 : 1
initbody             : 5 6 7 8
listcon              : 1 40
login                : 42
network              : 7
peercon              : 54 55 56 57 58 59 61 68
peering              : 42 52
peermsg              : 52 53
plugin               : 10 47 55
route                : 63 64
routehead            : 60
routend              : 60
routing              : 60 63
sbinit               : 12
software             : 6
start                : 42
tuntap               : 13
user                 : 48 57 58 61 69
vpnip                : 2 4

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . header init listcon
    (2) header -> . ROUTE_HEADER vpnip ROUTE_HEADER

    ROUTE_HEADER    shift and go to state 3

    file                           shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> file .



state 2

    (1) file -> header . init listcon
    (5) init -> . initbody FASE_END
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (73) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 73 (empty -> .)

    init                           shift and go to state 4
    initbody                       shift and go to state 5
    date                           shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) header -> ROUTE_HEADER . vpnip ROUTE_HEADER
    (3) vpnip -> . empty
    (4) vpnip -> . VPN_IP IP vpnip
    (73) empty -> .

    VPN_IP          shift and go to state 11
    ROUTE_HEADER    reduce using rule 73 (empty -> .)

    vpnip                          shift and go to state 9
    empty                          shift and go to state 10

state 4

    (1) file -> header init . listcon
    (40) listcon -> . listcon conection
    (41) listcon -> . conection
    (42) conection -> . start coninit login peering conline end
    (43) start -> . date TCP_MSG IP PORT
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    WEEK_DAY        shift and go to state 8

    listcon                        shift and go to state 12
    conection                      shift and go to state 13
    start                          shift and go to state 14
    date                           shift and go to state 15

state 5

    (5) init -> initbody . FASE_END

    FASE_END        shift and go to state 16


state 6

    (6) initbody -> date . software initbody
    (7) initbody -> date . network initbody
    (8) initbody -> date . hardware initbody
    (10) software -> . plugin
    (11) software -> . SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (12) network -> . sbinit
    (13) network -> . tuntap
    (14) network -> . CRYPTO_MSG
    (15) network -> . ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
    (16) network -> . IP_PROTOCOL
    (17) network -> . CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (18) network -> . CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (19) network -> . IFCONFIG_END
    (20) network -> . CONN_MSG
    (21) network -> . TCP_MSG
    (22) network -> . SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (23) hardware -> . SYS_MSG
    (24) hardware -> . SIGTERM_MSG
    (25) hardware -> . OPEN_VPN_MSG MONTH DAY YEAR
    (26) hardware -> . LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
    (27) hardware -> . SYS_MSG VAR_SET VAR_VAL
    (28) hardware -> . VAR_SET VAR_VAL
    (34) plugin -> . PLUGIN_MSG DIR VAR_SET VAR_VAL
    (35) plugin -> . PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (36) plugin -> . PLUGIN_MSG DIR
    (37) plugin -> . PLUGIN_MSG
    (38) plugin -> . IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (29) sbinit -> . SBIN_IP_MSG IP IP_RNG
    (30) sbinit -> . SBIN_IP_MSG IP IP_RNG PEER IP
    (31) sbinit -> . SBIN_IP_MSG IP PEER IP
    (32) sbinit -> . SBIN_IP_MSG
    (33) sbinit -> . empty
    (39) tuntap -> . TUN_TAP_MSG
    (73) empty -> .

    SYS_MSG         shift and go to state 21
    CRYPTO_MSG      shift and go to state 25
    ROUTE_GATEWAY   shift and go to state 26
    IP_PROTOCOL     shift and go to state 28
    CONN_MSG        shift and go to state 29
    IFCONFIG_END    shift and go to state 30
    TCP_MSG         shift and go to state 31
    SIGTERM_MSG     shift and go to state 32
    OPEN_VPN_MSG    shift and go to state 33
    LIB_VER_MSG     shift and go to state 34
    VAR_SET         shift and go to state 22
    PLUGIN_MSG      shift and go to state 35
    IP              shift and go to state 27
    SBIN_IP_MSG     shift and go to state 36
    TUN_TAP_MSG     shift and go to state 38
    WEEK_DAY        reduce using rule 73 (empty -> .)
    FASE_END        reduce using rule 73 (empty -> .)

    software                       shift and go to state 17
    network                        shift and go to state 18
    hardware                       shift and go to state 19
    plugin                         shift and go to state 20
    sbinit                         shift and go to state 23
    tuntap                         shift and go to state 24
    empty                          shift and go to state 37

state 7

    (9) initbody -> empty .

    FASE_END        reduce using rule 9 (initbody -> empty .)


state 8

    (70) date -> WEEK_DAY . MONTH DAY CLOCK YEAR

    MONTH           shift and go to state 39


state 9

    (2) header -> ROUTE_HEADER vpnip . ROUTE_HEADER

    ROUTE_HEADER    shift and go to state 40


state 10

    (3) vpnip -> empty .

    ROUTE_HEADER    reduce using rule 3 (vpnip -> empty .)


state 11

    (4) vpnip -> VPN_IP . IP vpnip

    IP              shift and go to state 41


state 12

    (1) file -> header init listcon .
    (40) listcon -> listcon . conection
    (42) conection -> . start coninit login peering conline end
    (43) start -> . date TCP_MSG IP PORT
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    $end            reduce using rule 1 (file -> header init listcon .)
    WEEK_DAY        shift and go to state 8

    conection                      shift and go to state 42
    start                          shift and go to state 14
    date                           shift and go to state 15

state 13

    (41) listcon -> conection .

    WEEK_DAY        reduce using rule 41 (listcon -> conection .)
    $end            reduce using rule 41 (listcon -> conection .)


state 14

    (42) conection -> start . coninit login peering conline end
    (44) coninit -> . coninit conmsg
    (45) coninit -> . conmsg
    (46) conmsg -> . date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
    (47) conmsg -> . date plugin
    (48) conmsg -> . date IP PORT SYS_MSG SPECIAL_CHAR user SPECIAL_CHAR CN_SET
    (49) conmsg -> . date IP PORT CONN_MSG CRYPTO_MSG
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    WEEK_DAY        shift and go to state 8

    coninit                        shift and go to state 43
    conmsg                         shift and go to state 44
    date                           shift and go to state 45

state 15

    (43) start -> date . TCP_MSG IP PORT

    TCP_MSG         shift and go to state 46


state 16

    (5) init -> initbody FASE_END .

    WEEK_DAY        reduce using rule 5 (init -> initbody FASE_END .)


state 17

    (6) initbody -> date software . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (73) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 73 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 47
    empty                          shift and go to state 7

state 18

    (7) initbody -> date network . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (73) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 73 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 48
    empty                          shift and go to state 7

state 19

    (8) initbody -> date hardware . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (70) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (73) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 73 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 49
    empty                          shift and go to state 7

state 20

    (10) software -> plugin .

    WEEK_DAY        reduce using rule 10 (software -> plugin .)
    FASE_END        reduce using rule 10 (software -> plugin .)


state 21

    (11) software -> SYS_MSG . SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (22) network -> SYS_MSG . VAR_SET VAR_VAL VAR_SET VAR_VAL
    (23) hardware -> SYS_MSG .
    (27) hardware -> SYS_MSG . VAR_SET VAR_VAL

    SPECIAL_CHAR    shift and go to state 50
    VAR_SET         shift and go to state 51
    WEEK_DAY        reduce using rule 23 (hardware -> SYS_MSG .)
    FASE_END        reduce using rule 23 (hardware -> SYS_MSG .)


state 22

    (28) hardware -> VAR_SET . VAR_VAL

    VAR_VAL         shift and go to state 52


state 23

    (12) network -> sbinit .

    WEEK_DAY        reduce using rule 12 (network -> sbinit .)
    FASE_END        reduce using rule 12 (network -> sbinit .)


state 24

    (13) network -> tuntap .

    WEEK_DAY        reduce using rule 13 (network -> tuntap .)
    FASE_END        reduce using rule 13 (network -> tuntap .)


state 25

    (14) network -> CRYPTO_MSG .

    WEEK_DAY        reduce using rule 14 (network -> CRYPTO_MSG .)
    FASE_END        reduce using rule 14 (network -> CRYPTO_MSG .)


state 26

    (15) network -> ROUTE_GATEWAY . IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL

    IP              shift and go to state 53


state 27

    (38) plugin -> IP . PORT PLUGIN_MSG DIR VAR_SET VAR_VAL

    PORT            shift and go to state 54


state 28

    (16) network -> IP_PROTOCOL .

    WEEK_DAY        reduce using rule 16 (network -> IP_PROTOCOL .)
    FASE_END        reduce using rule 16 (network -> IP_PROTOCOL .)


state 29

    (17) network -> CONN_MSG . VAR_SET VAR_VAL VAR_SET VAR_VAL
    (18) network -> CONN_MSG . VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (20) network -> CONN_MSG .
